--- a/images/portfolio.css
+++ b/images/portfolio.css
@@ -104,7 +104,7 @@ nav{
   max-width: 585px;
   vertical-align: middle;
 }
-#about{
+#about, #skills,#resume{
   padding-top: 130px;
 
 }
@@ -131,10 +131,7 @@ justify-content: space-around;
 .about-info .info-card h4{
   font-size: 20px;
 }
-#skills{
-  padding-top: 130px;
 
-}
 #skills .skills-container{
   width:71%;
   max-width:1140px;
@@ -168,4 +165,44 @@ justify-content: space-around;
   color:#757575;
   line-height: 28px;
 
+}
+#resume .resume-container{
+  width:71%;
+  max-width:1140px;
+  margin:113px auto 0;
+  display: flex;
+  gap:24px;
+}
+
+.resume-container hr{
+  margin:30px;
+}
+.resume-container .section-title{
+  color:#474747;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+.resume-card{
+  max-width: 511px;
+  margin-right: 47px;
+}
+
+.resume-card .card-title{
+  font-size: 25px;
+  font-weight: bold;
+  color: #474747;
+  margin-bottom:10px;
+}
+
+.resume-card .card-info{
+  font-size: 20px;
+  font-weight: 600;
+  color: #757575;
+  margin-bottom:20px;
+}
+.resume-card .card-text{
+  font-size: 16px;
+  color: #757575;
+  line-height: 28px;
+  margin-bottom:30px;
 }
